# flet-scheduler

./: pyproject.toml
