[tool.poetry]
name = "dabro"
version = "0.1.0"
description = ""
authors = ["petr <petr777@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flet = "^0.3.2"
#matplotlib = "^3.6.3"
#plotly = "^5.12.0"
#plotly-express = "^0.4.1"
#python-slugify = "^7.0.0"
python-slugify = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
